# tracing-otel-test

./: Cargo.toml
src/: main.rs
