[package]
name = "tracing-otel-test"
version = "0.1.0"
authors = ["Nate Mara <nate@onesignal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.12.0"
opentelemetry = { version = "0.13", features = ["rt-tokio"] }
